// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`slateToMarkdown with the Payload config combined fixtures larger document 1 1`] = `
"## Heading 2

A regular paragraph.

A **paragraph** with ***various*** text ~~marks~~.

### Heading 3

- **Item 1**: From a list
- **Item 2**: From a list

[Find out more about Slate](https://docs.slatejs.org/).

#### Heading 4"
`;

exports[`slateToMarkdown with the Payload config combined fixtures links nested in an unordered list 1`] = `
"- [slate-serializers | GitHub](https://github.com/thompsonsj/slate-serializers)
- [slate-serializers | GitHub](https://github.com/thompsonsj/slate-serializers)"
`;

exports[`slateToMarkdown with the Payload config combined fixtures text with inline link 1`] = `"Some text before an inline link [slate-serializers | GitHub](https://github.com/thompsonsj/slate-serializers)."`;

exports[`slateToMarkdown with the Payload config element fixtures blockquote 1`] = `"> Blockquote"`;

exports[`slateToMarkdown with the Payload config element fixtures headings 1`] = `
"# Heading 1

## Heading 2

### Heading 3

#### Heading 4

##### Heading 5

###### Heading 6"
`;

exports[`slateToMarkdown with the Payload config element fixtures link 1`] = `"[Slate Serializers | GitHub](https://github.com/thompsonsj/slate-serializers)"`;

exports[`slateToMarkdown with the Payload config element fixtures nested unordered list 1`] = `
"- Item 1
  - Nested item 1
  - Nested item 2
- Item 2"
`;

exports[`slateToMarkdown with the Payload config element fixtures ordered list 1`] = `
"1. Item 1
2. Item 2"
`;

exports[`slateToMarkdown with the Payload config element fixtures paragraph 1`] = `"Paragraph 1"`;

exports[`slateToMarkdown with the Payload config element fixtures unordered list 1`] = `
"- Item 1
- Item 2"
`;

exports[`slateToMarkdown with the Payload config styleObject fixtures mark transform 1`] = `"**Paragraph**"`;

exports[`slateToMarkdown with the Payload config styleObject fixtures mark transforms on multiple marks 1`] = `"This is editable **rich** text, *much* better than a \`<textarea>\`!"`;

exports[`slateToMarkdown with the Payload config styleObject fixtures p tag element transform 1`] = `"**Paragraph**"`;

exports[`slateToMarkdown with the Payload config stylesMixedIn fixtures #180 leaf color only 1`] = `"Painted"`;

exports[`slateToMarkdown with the Payload config stylesMixedIn fixtures #180 leaf color with bold 1`] = `"**Bold red**"`;

exports[`slateToMarkdown with the Payload config stylesMixedIn fixtures #180 leaf color with code 1`] = `"\`<code>\`"`;

exports[`slateToMarkdown with the Payload config stylesMixedIn fixtures p tag element transform 1`] = `"***<u>some title!</u>***"`;

exports[`slateToMarkdown with the Payload config text fixtures idiomatic text 1`] = `"*Idiomatic Text*"`;

exports[`slateToMarkdown with the Payload config text fixtures pre 1`] = `"\`Pre\`"`;

exports[`slateToMarkdown with the Payload config text fixtures strikethrough 1`] = `"~~Strikethrough~~"`;

exports[`slateToMarkdown with the Payload config text fixtures strong 1`] = `"**Bold**"`;

exports[`slateToMarkdown with the Payload config text fixtures strong and idiomatic text 1`] = `"***Strong and Idiomatic Text***"`;

exports[`slateToMarkdown with the Payload config text fixtures strong and unarticulated annotation 1`] = `"**<u>Strong and Unarticulated Annotation</u>**"`;

exports[`slateToMarkdown with the Payload config text fixtures strong in paragraph 1`] = `"**Bold**"`;

exports[`slateToMarkdown with the Payload config text fixtures strong mid-sentence 1`] = `
"Some

**bold text**

in a sentence."
`;

exports[`slateToMarkdown with the Payload config text fixtures unarticulated annotation 1`] = `"<u>Unarticulated Annotation</u>"`;

exports[`slateToMarkdown with the default config combined fixtures larger document 1 1`] = `
"## Heading 2

A regular paragraph.

A **paragraph** with ***various*** text ~~marks~~.

### Heading 3

- **Item 1**: From a list
- **Item 2**: From a list

[Find out more about Slate](https://docs.slatejs.org/).

#### Heading 4"
`;

exports[`slateToMarkdown with the default config combined fixtures links nested in an unordered list 1`] = `
"- [slate-serializers | GitHub](https://github.com/thompsonsj/slate-serializers)
- [slate-serializers | GitHub](https://github.com/thompsonsj/slate-serializers)"
`;

exports[`slateToMarkdown with the default config combined fixtures text with inline link 1`] = `"Some text before an inline link [slate-serializers | GitHub](https://github.com/thompsonsj/slate-serializers)."`;

exports[`slateToMarkdown with the default config element fixtures blockquote 1`] = `"> Blockquote"`;

exports[`slateToMarkdown with the default config element fixtures headings 1`] = `
"# Heading 1

## Heading 2

### Heading 3

#### Heading 4

##### Heading 5

###### Heading 6"
`;

exports[`slateToMarkdown with the default config element fixtures link 1`] = `"[Slate Serializers | GitHub](https://github.com/thompsonsj/slate-serializers)"`;

exports[`slateToMarkdown with the default config element fixtures nested unordered list 1`] = `
"- Item 1
  - Nested item 1
  - Nested item 2
- Item 2"
`;

exports[`slateToMarkdown with the default config element fixtures ordered list 1`] = `
"1. Item 1
2. Item 2"
`;

exports[`slateToMarkdown with the default config element fixtures paragraph 1`] = `"Paragraph 1"`;

exports[`slateToMarkdown with the default config element fixtures unordered list 1`] = `
"- Item 1
- Item 2"
`;

exports[`slateToMarkdown with the default config styleObject fixtures mark transform 1`] = `"**Paragraph**"`;

exports[`slateToMarkdown with the default config styleObject fixtures mark transforms on multiple marks 1`] = `"This is editable **rich** text, *much* better than a \`<textarea>\`!"`;

exports[`slateToMarkdown with the default config styleObject fixtures p tag element transform 1`] = `"**Paragraph**"`;

exports[`slateToMarkdown with the default config stylesMixedIn fixtures #180 leaf color only 1`] = `"Painted"`;

exports[`slateToMarkdown with the default config stylesMixedIn fixtures #180 leaf color with bold 1`] = `"**Bold red**"`;

exports[`slateToMarkdown with the default config stylesMixedIn fixtures #180 leaf color with code 1`] = `"\`<code>\`"`;

exports[`slateToMarkdown with the default config stylesMixedIn fixtures p tag element transform 1`] = `"***<u>some title!</u>***"`;

exports[`slateToMarkdown with the default config text fixtures idiomatic text 1`] = `"*Idiomatic Text*"`;

exports[`slateToMarkdown with the default config text fixtures pre 1`] = `"\`Pre\`"`;

exports[`slateToMarkdown with the default config text fixtures strikethrough 1`] = `"~~Strikethrough~~"`;

exports[`slateToMarkdown with the default config text fixtures strong 1`] = `"**Bold**"`;

exports[`slateToMarkdown with the default config text fixtures strong and idiomatic text 1`] = `"***Strong and Idiomatic Text***"`;

exports[`slateToMarkdown with the default config text fixtures strong and unarticulated annotation 1`] = `"**<u>Strong and Unarticulated Annotation</u>**"`;

exports[`slateToMarkdown with the default config text fixtures strong in paragraph 1`] = `"**Bold**"`;

exports[`slateToMarkdown with the default config text fixtures strong mid-sentence 1`] = `
"Some

**bold text**

in a sentence."
`;

exports[`slateToMarkdown with the default config text fixtures unarticulated annotation 1`] = `"<u>Unarticulated Annotation</u>"`;
